@@ -1,0 +1,4 @@
+# Unicode symbol in program name and message
+Hückel-detect:: ERROR, cannot check Hückel's rule.
+# Unicode symbol in program name and file name
+Kekulé: Hückel-structure: OK.
