@@ -1,0 +1,1 @@
+Tests messages with program and file names having Unicode symbols.
