@@ -1,0 +1,2 @@
+Hückel-detect					ERROR	cannot check Hückel's rule
+Kekulé	Hückel-structure					OK
