@@ -104,6 +104,9 @@ cod-tools (unreleased)
         a trailing space symbol (' '). The '\\db ', '\\tb ' and '\\ddb ' codes
         were left unchanged since IUCr explicitly specifies that they should
         be followed by a space.
+    - COD::UserMessage:
+      - fixed parsing of messages having Unicode symbols in program and
+        file names.
 
 cod-tools (3.1.0)
 
